Add WebUSB settings deletion

WebUSB settings are currently not deleted when Site Settings are
deleted.
As they are similar to content settings, zoom levels and protocol handlers,
they should be removed when deleting Site Settings from Clear Browsing Data.

This CL implements the deletion of "usb-chooser-data" and fixes a test that
should have caught this but failed because usb-chooser-data was the only
website setting registered as REQUESTING_ORIGIN_AND_TOP_LEVEL_ORIGIN_SCOPE
and this type wasn't covered correctly by the test.

Bug: 847183
Change-Id: Iec5208090e89afa1a1e4da488cd37c2d1c55341e
Reviewed-on: https://chromium-review.googlesource.com/1075269
Commit-Queue: Christian Dullweber <dullweber@chromium.org>
Reviewed-by: Martin Šrámek <msramek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562257}
Former-commit-id: 9ccc4fae6f48397e737e3075224688adf133746b